3.8.0/_sources/plugins/index.rst.txt



.. _plugins_in_redhat.satellite:

Redhat.Satellite
================

Collection version 3.8.0

.. contents::
   :local:
   :depth: 1

Description
-----------

Ansible Modules to manage Satellite installations

**Authors:**

* Adam Růžička <aruzicka@redhat.com>
* AlanCoding <arominge@redhat.com>
* Andrew Kofink <ajkofink@gmail.com>
* Anthony Green <green@moxielogic.com>
* Anton <nesanton@gmail.com>
* Baptiste Agasse <baptiste.agasse@gmail.com>
* Bernhard Hopfenmüller <hopfenmueller@atix.de>
* Bernhard Suttner <sbernhard@users.noreply.github.com>
* Bryan Kearney <bkearney@redhat.com>
* Chris Forkner <gen2fish@gmail.com>
* Chris Hindman <chindman@chindman.remote.csb>
* Chris Snell <chsnell@users.noreply.github.com>
* Christoffer Reijer <ephracis@gmail.com>
* Dave Thomas <11580510+dthomastx@users.noreply.github.com>
* Deric Crago <deric.crago@gmail.com>
* Eric D. Helms <ericdhelms@gmail.com>
* Eric L <ericzolf@users.noreply.github.com>
* Ethan <smithe2413@gmail.com>
* Evgeni Golov <evgeni@golov.de>
* Ewoud Kohl van Wijngaarden <ewoud@kohlvanwijngaarden.nl>
* Felix Fontein <felix@fontein.de>
* Gerald Vogt <gvde@users.noreply.github.com>
* Greg Swift <gregswift@gmail.com>
* Griffin Sullivan <gsulliva@redhat.com>
* Hideki Saito <saito@fgrep.org>
* Ismael Puerto <ismaelpuerto@users.noreply.github.com>
* Jameer Pathan <jpathan@redhat.com>
* James Jeffers <jjeffers@redhat.com>
* James Stuart <james@stuart.name>
* Jeffrey van Pelt <jeff@vanpelt.one>
* Jeremy Albinet <jalbinet@scaleway.com>
* Jeremy Lenz <jlenz@redhat.com>
* Jesper Reenberg <jesper.reenberg@gmail.com>
* John Berninger <john.berninger@gmail.com>
* Josh Swanson <jswanson@redhat.com>
* Kenny Tordeurs <ktordeur@redhat.com>
* Kirill Shirinkin <fodojyko@gmail.com>
* Leos Stejskal <lstejska@redhat.com>
* Lester Claudio <claudiol@redhat.com>
* Lucas Bickel <hairmare@rabe.ch>
* Lukáš Zapletal <lzap+git@redhat.com>
* Manisha Singhal <manisha1595@gmail.com>
* Manuel Bonk <githubMB@bonkii.com>
* Marcelo Moreira de Mello <tchello.mello@gmail.com>
* Marek Czernek <mczernek@redhat.com>
* Mark Hlawatschek <hlawatschek@atix.de>
* Markus Bucher <bucher@atix.de>
* Martin Schlossarek <martin.schlossarek@gmail.com>
* Matthias Dellweg <2500@gmx.de>
* Miikka Joutsenvirta <miikka.joutsenvirta@dna.fi>
* Nikhil Jain <jainnikhil30@gmail.com>
* Olivier <oliverf1ca@yahoo.com>
* Ondrej Prazak <oprazak@redhat.com>
* Ondřej Ezr <oezr@redhat.com>
* Ondřej Gajdušek <ogajduse@redhat.com>
* Patrick C. F. Ernzer <pcfe@pcfe.net>
* Patrick Creech <pcreech@redhat.com>
* Paul Armstrong <parmstro@users.noreply.github.com>
* Paul Belanger <pabelanger@redhat.com>
* Paul Gration <pmgration@gmail.com>
* Peter Ondrejka <pondrejk@redhat.com>
* Philipp <philipp98.joos@gmail.com>
* Quirin Pamp <pamp@atix.de>
* Richard Stempfl <richielatk@gmail.com>
* Sam <samcalvert@me.com>
* Samir Jha <sjha4@ncsu.edu>
* Sean O'Keeffe <seanokeeffe797@gmail.com>
* Sorin Sbarnea <sorin.sbarnea@gmail.com>
* Stoned Elipot <stoned.elipot@gmail.com>
* TTherouanne <thomas@therouanne.com>
* Thomas Mueller <thomas@chaschperli.ch>
* William Bradford Clark <wclark@redhat.com>
* Yifat Makias <ymakias@redhat.com>
* achevalet <anthony.chevalet@gmail.com>
* bob <57952350+TheRedGreek@users.noreply.github.com>
* calvingsmith <4283930+calvingsmith@users.noreply.github.com>
* divialth <65872926+divialth@users.noreply.github.com>
* furhouse <furhouse@users.noreply.github.com>
* gardar <gardar@users.noreply.github.com>
* igramic <36156377+igramic@users.noreply.github.com>
* jerrejkw <43955357+jerrejkw@users.noreply.github.com>
* marco <marco.markgraf@transporeon.com>
* metalcated <mike.gomon@gmail.com>
* russianguppie <46544650+russianguppie@users.noreply.github.com>
* willtome <willtome@gmail.com>

**Supported ansible-core versions:**

* 2.9 or newer

.. raw:: html

  <p class="ansible-links">
    <a href="https://bugzilla.redhat.com" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://access.redhat.com/products/red-hat-satellite" aria-role="button" target="_blank" rel="noopener external">Homepage</a>
    <a href="https://github.com/RedHatSatellite/satellite-ansible-collection" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>



.. toctree::
    :maxdepth: 1


Plugin Index
------------

These are the plugins in the redhat.satellite collection:


Modules
~~~~~~~

* :ref:`activation_key module <ansible_collections.redhat.satellite.activation_key_module>` -- Manage Activation Keys
* :ref:`architecture module <ansible_collections.redhat.satellite.architecture_module>` -- Manage Architectures
* :ref:`auth_source_ldap module <ansible_collections.redhat.satellite.auth_source_ldap_module>` -- Manage LDAP Authentication Sources
* :ref:`bookmark module <ansible_collections.redhat.satellite.bookmark_module>` -- Manage Bookmarks
* :ref:`compute_attribute module <ansible_collections.redhat.satellite.compute_attribute_module>` -- Manage Compute Attributes
* :ref:`compute_profile module <ansible_collections.redhat.satellite.compute_profile_module>` -- Manage Compute Profiles
* :ref:`compute_resource module <ansible_collections.redhat.satellite.compute_resource_module>` -- Manage Compute Resources
* :ref:`config_group module <ansible_collections.redhat.satellite.config_group_module>` -- Manage (Puppet) Config Groups
* :ref:`content_credential module <ansible_collections.redhat.satellite.content_credential_module>` -- Manage Content Credentials
* :ref:`content_export_info module <ansible_collections.redhat.satellite.content_export_info_module>` -- List content exports
* :ref:`content_export_library module <ansible_collections.redhat.satellite.content_export_library_module>` -- Manage library content exports
* :ref:`content_export_repository module <ansible_collections.redhat.satellite.content_export_repository_module>` -- Manage repository content exports
* :ref:`content_export_version module <ansible_collections.redhat.satellite.content_export_version_module>` -- Manage content view version content exports
* :ref:`content_upload module <ansible_collections.redhat.satellite.content_upload_module>` -- Upload content to a repository
* :ref:`content_view module <ansible_collections.redhat.satellite.content_view_module>` -- Manage Content Views
* :ref:`content_view_filter module <ansible_collections.redhat.satellite.content_view_filter_module>` -- Manage Content View Filters
* :ref:`content_view_info module <ansible_collections.redhat.satellite.content_view_info_module>` -- Fetch information about Content Views
* :ref:`content_view_version module <ansible_collections.redhat.satellite.content_view_version_module>` -- Manage Content View Versions
* :ref:`content_view_version_info module <ansible_collections.redhat.satellite.content_view_version_info_module>` -- Fetch information about Content Views
* :ref:`discovery_rule module <ansible_collections.redhat.satellite.discovery_rule_module>` -- Manage Host Discovery Rules
* :ref:`domain module <ansible_collections.redhat.satellite.domain_module>` -- Manage Domains
* :ref:`domain_info module <ansible_collections.redhat.satellite.domain_info_module>` -- Fetch information about Domains
* :ref:`external_usergroup module <ansible_collections.redhat.satellite.external_usergroup_module>` -- Manage External User Groups
* :ref:`global_parameter module <ansible_collections.redhat.satellite.global_parameter_module>` -- Manage Global Parameters
* :ref:`hardware_model module <ansible_collections.redhat.satellite.hardware_model_module>` -- Manage Hardware Models
* :ref:`host module <ansible_collections.redhat.satellite.host_module>` -- Manage Hosts
* :ref:`host_collection module <ansible_collections.redhat.satellite.host_collection_module>` -- Manage Host Collections
* :ref:`host_errata_info module <ansible_collections.redhat.satellite.host_errata_info_module>` -- Fetch information about Host Errata
* :ref:`host_info module <ansible_collections.redhat.satellite.host_info_module>` -- Fetch information about Hosts
* :ref:`host_power module <ansible_collections.redhat.satellite.host_power_module>` -- Manage Power State of Hosts
* :ref:`hostgroup module <ansible_collections.redhat.satellite.hostgroup_module>` -- Manage Hostgroups
* :ref:`http_proxy module <ansible_collections.redhat.satellite.http_proxy_module>` -- Manage HTTP Proxies
* :ref:`image module <ansible_collections.redhat.satellite.image_module>` -- Manage Images
* :ref:`installation_medium module <ansible_collections.redhat.satellite.installation_medium_module>` -- Manage Installation Media
* :ref:`job_invocation module <ansible_collections.redhat.satellite.job_invocation_module>` -- Invoke Remote Execution Jobs
* :ref:`job_template module <ansible_collections.redhat.satellite.job_template_module>` -- Manage Job Templates
* :ref:`lifecycle_environment module <ansible_collections.redhat.satellite.lifecycle_environment_module>` -- Manage Lifecycle Environments
* :ref:`location module <ansible_collections.redhat.satellite.location_module>` -- Manage Locations
* :ref:`operatingsystem module <ansible_collections.redhat.satellite.operatingsystem_module>` -- Manage Operating Systems
* :ref:`organization module <ansible_collections.redhat.satellite.organization_module>` -- Manage Organizations
* :ref:`organization_info module <ansible_collections.redhat.satellite.organization_info_module>` -- Get information about organization(s)
* :ref:`os_default_template module <ansible_collections.redhat.satellite.os_default_template_module>` -- Manage Default Template Associations To Operating Systems
* :ref:`partition_table module <ansible_collections.redhat.satellite.partition_table_module>` -- Manage Partition Table Templates
* :ref:`product module <ansible_collections.redhat.satellite.product_module>` -- Manage Products
* :ref:`provisioning_template module <ansible_collections.redhat.satellite.provisioning_template_module>` -- Manage Provisioning Templates
* :ref:`puppet_environment module <ansible_collections.redhat.satellite.puppet_environment_module>` -- Manage Puppet Environments
* :ref:`puppetclasses_import module <ansible_collections.redhat.satellite.puppetclasses_import_module>` -- Import Puppet Classes from a Proxy
* :ref:`realm module <ansible_collections.redhat.satellite.realm_module>` -- Manage Realms
* :ref:`redhat_manifest module <ansible_collections.redhat.satellite.redhat_manifest_module>` -- Interact with a Red Hat Satellite Subscription Manifest
* :ref:`repository module <ansible_collections.redhat.satellite.repository_module>` -- Manage Repositories
* :ref:`repository_info module <ansible_collections.redhat.satellite.repository_info_module>` -- Fetch information about Repositories
* :ref:`repository_set module <ansible_collections.redhat.satellite.repository_set_module>` -- Enable/disable Red Hat Repositories available through subscriptions
* :ref:`repository_set_info module <ansible_collections.redhat.satellite.repository_set_info_module>` -- Fetch information about Red Hat Repositories
* :ref:`repository_sync module <ansible_collections.redhat.satellite.repository_sync_module>` -- Sync a Repository or Product
* :ref:`resource_info module <ansible_collections.redhat.satellite.resource_info_module>` -- Gather information about resources
* :ref:`role module <ansible_collections.redhat.satellite.role_module>` -- Manage Roles
* :ref:`scap_content module <ansible_collections.redhat.satellite.scap_content_module>` -- Manage SCAP content
* :ref:`scap_tailoring_file module <ansible_collections.redhat.satellite.scap_tailoring_file_module>` -- Manage SCAP Tailoring Files
* :ref:`setting module <ansible_collections.redhat.satellite.setting_module>` -- Manage Settings
* :ref:`setting_info module <ansible_collections.redhat.satellite.setting_info_module>` -- Fetch information about Settings
* :ref:`smart_class_parameter module <ansible_collections.redhat.satellite.smart_class_parameter_module>` -- Manage Smart Class Parameters
* :ref:`smart_proxy module <ansible_collections.redhat.satellite.smart_proxy_module>` -- Manage Smart Proxies
* :ref:`status_info module <ansible_collections.redhat.satellite.status_info_module>` -- Get status info
* :ref:`subnet module <ansible_collections.redhat.satellite.subnet_module>` -- Manage Subnets
* :ref:`subnet_info module <ansible_collections.redhat.satellite.subnet_info_module>` -- Fetch information about Subnets
* :ref:`subscription_info module <ansible_collections.redhat.satellite.subscription_info_module>` -- Fetch information about Subscriptions
* :ref:`subscription_manifest module <ansible_collections.redhat.satellite.subscription_manifest_module>` -- Manage Subscription Manifests
* :ref:`sync_plan module <ansible_collections.redhat.satellite.sync_plan_module>` -- Manage Sync Plans
* :ref:`templates_import module <ansible_collections.redhat.satellite.templates_import_module>` -- Sync Templates from a repository
* :ref:`user module <ansible_collections.redhat.satellite.user_module>` -- Manage Users
* :ref:`usergroup module <ansible_collections.redhat.satellite.usergroup_module>` -- Manage User Groups

.. toctree::
    :maxdepth: 1
    :hidden:

    activation_key_module
    architecture_module
    auth_source_ldap_module
    bookmark_module
    compute_attribute_module
    compute_profile_module
    compute_resource_module
    config_group_module
    content_credential_module
    content_export_info_module
    content_export_library_module
    content_export_repository_module
    content_export_version_module
    content_upload_module
    content_view_module
    content_view_filter_module
    content_view_info_module
    content_view_version_module
    content_view_version_info_module
    discovery_rule_module
    domain_module
    domain_info_module
    external_usergroup_module
    global_parameter_module
    hardware_model_module
    host_module
    host_collection_module
    host_errata_info_module
    host_info_module
    host_power_module
    hostgroup_module
    http_proxy_module
    image_module
    installation_medium_module
    job_invocation_module
    job_template_module
    lifecycle_environment_module
    location_module
    operatingsystem_module
    organization_module
    organization_info_module
    os_default_template_module
    partition_table_module
    product_module
    provisioning_template_module
    puppet_environment_module
    puppetclasses_import_module
    realm_module
    redhat_manifest_module
    repository_module
    repository_info_module
    repository_set_module
    repository_set_info_module
    repository_sync_module
    resource_info_module
    role_module
    scap_content_module
    scap_tailoring_file_module
    setting_module
    setting_info_module
    smart_class_parameter_module
    smart_proxy_module
    status_info_module
    subnet_module
    subnet_info_module
    subscription_info_module
    subscription_manifest_module
    sync_plan_module
    templates_import_module
    user_module
    usergroup_module


Callback Plugins
~~~~~~~~~~~~~~~~

* :ref:`foreman callback <ansible_collections.redhat.satellite.foreman_callback>` -- Sends events to Foreman

.. toctree::
    :maxdepth: 1
    :hidden:

    foreman_callback


Filter Plugins
~~~~~~~~~~~~~~

* :ref:`cp_label filter <ansible_collections.redhat.satellite.cp_label_filter>` -- Convert strings to Candlepin labels

.. toctree::
    :maxdepth: 1
    :hidden:

    cp_label_filter


Inventory Plugins
~~~~~~~~~~~~~~~~~

* :ref:`foreman inventory <ansible_collections.redhat.satellite.foreman_inventory>` -- Foreman inventory source

.. toctree::
    :maxdepth: 1
    :hidden:

    foreman_inventory


